Bug #17272087 - MYSQL FOR EXCEL SIDEBAR DOES NOT APPEAR IN EXCEL 2013 (WITH WORKAROUND)
- Added support for Excel 2013 Single Document Interface, now that Excel 2013 creates 1 window per workbook also the Excel Add-In maintains an independent custom task pane in each window. (source/ThisAddIn.cs)
- Changed the behavior of the ribbon's toggle button to open/close the active Excel Add-In pane instead of just showing/hiding it. Also added support for Excel 2013 SDI model (i.e. do not assume a single custom task pane, but 1 per window). (source/Controls/ManageTaskPaneRibbon.cs)
- Renamed the TaskPaneControl class and files to ExcelAddInPane. (source/Controls/ExcelAddInPane.cs, source/Controls/ExcelAddInPane.Designer.cs, source/Controls/ExcelAddInPane.resx, source/Forms/EditDataDialog.cs, source/Panels/DBObjectSelectionPanel.cs, source/Panels/SchemaSelectionPanel.cs, source/Panels/WelcomePanel.cs, source/Panels/WelcomePanel.Designer.cs, source/MySQL.ForExcel.csproj)
- Moved the code that closes connections and active editing sessions from the CloseAddIn method to the Dispose method. (source/Controls/ExcelAddInPane.cs, source/Controls/ExcelAddInPane.Designer.cs)
- Fixed header comments for proper parsing and conversion from GPL > Commercial header. (source/Properties/AssemblyInfo.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.1.2
+- Added support for Excel 2013 Single Document Interface, now that Excel 2013 creates 1 window per workbook also the Excel Add-In maintains an independent
+  custom task pane in each window. Also changed the way the toggle button works, instead of just showing or hiding the Add-In it actually opens and closes it.
+  (MySQL Bug #68792, Bug #17272087 - MYSQL FOR EXCEL SIDEBAR DOES NOT APPEAR IN EXCEL 2013 (WITH WORKAROUND))
 - Included the latest MySQL Utility with a code fix for the COM exception thrown when attempting to open Workbench in the Manage Connections window.
   (Bug #17258966 - MYSQL WORKBENCH NOT OPENED BY CLICKING MANAGE CONNECTIONS HOTLABEL)
 - Fixed code for Append Data operations that was not applying a calculated automatic mapping correctly when the source and target tables had different number of
