Bug #17259490 - EXPORT DATA TEXT DATA TYPE NOT RECOGNIZED AS A VALID DATA TYPE
- Added an optimization to the CanBeOfMySQLDataType method to stop looping all rows in the table if the data type was already determined to be unfit for the the column rows analyzed so far. (source/Classes/MySQLDataColumn.cs)
- Fixed code in the StringValueCanBeStoredWithMySQLType to treat the text data type separate from char and varchar data types for it to be recognized as valid for ANY data in the Excel row. Optimized the code in the whole StringValueCanBeStoredWithMySQLType method to analyze first data types that do need any conversion, and then analyze others growing in complexity since this method is called for every row x column in the data table. (source/Classes/Utilities.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.1.2
+- Fixed code for Export Data operations where users overrode the data type for columns typing Text in the data type combobox, which is a valid data type but was
+  not recognized as such. (Bug #17259490 - EXPORT DATA TEXT DATA TYPE NOT RECOGNIZED AS A VALID DATA TYPE)
 - Changed the location of the registry where the MySQL for Excel add-in is installed to HKEY_LOCAL_MACHINE instead of HKEY_CURRENT_USER so the add-in is accessible
   by all users and not only to the user that installed it. For this to work with Excel 2007 a hotfix may be required (see http://support.microsoft.com/kb/976477).
   (MySQL Bug #68746, Bug #16675992 - EXCEL-ADD-IN IS ONLY INSTALLED FOR USER ACCOUNT THAT THE INSTALLATION RUNS UNDER)
